--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cypress": "^13.2.0",
     "cypress-ag-grid": "^2.0.2",
     "cypress-map": "^1.21.1",
+    "cypress-split": "^1.21.2",
     "globby": "^13.1.3",
     "xlsx": "^0.18.5",
     "xml2js": "^0.6.2"
