--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@cypress/xpath": "^2.0.3",
     "cypress-aliases": "^2.1.0",
     "cypress-junit-reporter": "^1.3.1",
+    "cypress-mochawesome-reporter": "^3.8.2",
     "cypress-multi-reporters": "^1.6.3",
     "js-yaml": "^4.1.0",
     "mochawesome": "^7.1.3",
