--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: ci
 on: [push]
 jobs:
   test:
-    # https://github.com/bahmutov/cypress-workflows
-    uses: bahmutov/cypress-workflows/.github/workflows/split.yml@v2
-    with:
-      nE2E: 3
+      # https://github.com/bahmutov/cypress-workflows
+      uses: bahmutov/cypress-workflows/.github/workflows/split.yml@v2
+      with:
+        nE2E: 3
+        marge: true
