--- a/package.json
+++ b/package.json
@@ -4,22 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx cypress open --e2e --browser chrome"
+    "test": "npx cypress open"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^13.2.0",
+    "cypress": "^12.15.0",
     "cypress-ag-grid": "^2.0.2",
-    "cypress-map": "^1.21.1",
-    "cypress-split": "^1.21.2",
     "globby": "^13.1.3",
-    "xlsx": "^0.18.5",
-    "xml2js": "^0.6.2"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@cypress/xpath": "^2.0.3",
-    "cypress-aliases": "^2.1.0",
+    "cypress-junit-reporter": "^1.3.1",
+    "cypress-map": "^1.21.0",
+    "cypress-multi-reporters": "^1.6.3",
     "js-yaml": "^4.1.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.3.0",
