--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cypress": "^12.15.0",
     "cypress-ag-grid": "^2.0.2",
+    "cypress-split": "^1.21.2",
     "globby": "^13.1.3",
     "xlsx": "^0.18.5"
   },
